--- a/posts/Install-ArchLinux.mdx
+++ b/posts/Install-ArchLinux.mdx
@@ -22,7 +22,9 @@ imgUrl: 'http://pillan.inf.uct.cl/~lrevillod/img/About/assets/Arch-Neofetch.png'
 
 ## Esquema de particiones (Cfdisk):
 
-<CodeBox text='Aquí la imagen del esquema'/>
+<CodeBox text='/dev/x1 /boot  512M Type = EFI system' />
+<CodeBox text='/dev/x2 /        xG Type = Linux FS' />
+<CodeBox text='/dev/x3 swap     4G Type = Linux Swap' />
 
 ## Formatear las particiones con su sistema de archivos:
 
