--- a/posts/Install-PopShell.mdx
+++ b/posts/Install-PopShell.mdx
@@ -5,3 +5,30 @@ date: '2023-03-02'
 imgUrl: 'http://pillan.inf.uct.cl/~lrevillod/img/About/assets/PopSHELL.png'
 
 ---
+
+# Instalar Pop shell - Un gestor de ventanas para gnome
+
+<LargeImage 
+    imgRef='' 
+    imgSrc='https://forum.manjaro.org/uploads/default/original/2X/8/858f9d512d4c9eb0a856676a2ebea3ec88c85f51.png'
+    title=''
+/>
+
+## Instalación usando yay 
+
+### Versión normal
+<CodeBox text='yay -S gnome-shell-extension-pop-shell' />
+
+### Versión precompilada:
+<CodeBox text='yay -S gnome-shell-extension-pop-shell-bin' />
+
+### Version repositorio git:
+<CodeBox text='yay -S gnome-shell-extension-pop-shell-git' />
+
+## Repositorio oficial
+
+<LargeImage 
+    imgRef='https://github.com/pop-os/shell' 
+    imgSrc='https://raw.githubusercontent.com/pop-os/shell/master/screenshot.webp'
+    title='Github - Pop shell'
+/>
