--- a/posts/Customize-vscode.mdx
+++ b/posts/Customize-vscode.mdx
@@ -20,7 +20,7 @@ imgUrl: 'http://pillan.inf.uct.cl/~lrevillod/img/About/assets/posts/Finder.png'
 
 <CodeBox text='(Extensión) Error Lens' />
 
-## Configuraciones extra
+## Configuraciones extra (Descarga temporalmente no disponible)
 
 ### Settings.json
 
