--- a/posts/Customize-vscode.mdx
+++ b/posts/Customize-vscode.mdx
@@ -10,15 +10,15 @@ imgUrl: 'http://pillan.inf.uct.cl/~lrevillod/img/About/assets/posts/Finder.png'
 
 ## Tema principal
 
-<CodeBox text='Dark+ v2' />
+<CodeBox text='Dark+ v2' showImg={false}/>
 
 ## Iconos
 
-<CodeBox text='(Extensiones) Fluent icons & Symbols' />
+<CodeBox text='(Extensiones) Fluent icons & Symbols' showImg={false}/>
 
 ## Resalte de errores
 
-<CodeBox text='(Extensión) Error Lens' />
+<CodeBox text='(Extensión) Error Lens'  showImg={false} />
 
 ## Configuraciones extra (Descarga temporalmente no disponible)
 
@@ -40,7 +40,7 @@ imgUrl: 'http://pillan.inf.uct.cl/~lrevillod/img/About/assets/posts/Finder.png'
 
 ### Cascadia Code PL
 
-<CodeBox text='yay -S ttf-cascadia-code' />
+<CodeBox text='yay -S ttf-cascadia-code'/>
 
 ### Fira code
 
