--- a/posts/sudoers.mdx
+++ b/posts/sudoers.mdx
@@ -28,5 +28,5 @@ imgUrl: 'http://pillan.inf.uct.cl/~lrevillod/Blog/assets/posts/Sudoers-img.jpg'
 
 ## Guarda los cambios con el siguente comando
 
-<CodeBox text=':wq' />
+<CodeBox text=':wq' showImg={false}/>
 
