add aur fonts support

--- a/posts/Gnomintosh.mdx
+++ b/posts/Gnomintosh.mdx
@@ -65,6 +65,10 @@ imgUrl: 'http://pillan.inf.uct.cl/~lrevillod/Blog/assets/posts/Finder.png'
 ### Instalar Cursores
 
 <CodeBox text='./install.sh' />
+
+### Instalar fuentes SF Pro
+
+<CodeBox text='yay -S ttf-mac-fonts' />
  
 ### Reinicia el so
 
@@ -84,7 +88,7 @@ imgUrl: 'http://pillan.inf.uct.cl/~lrevillod/Blog/assets/posts/Finder.png'
 <LargeImage 
     imgRef='https://github.com/MrRevillod/Gnomintosh' 
     imgSrc='http://pillan.inf.uct.cl/~lrevillod/Blog/assets/posts/macos-neofetch.jpg'
-    title='Gnomintosh extensions and fonts'
+    title='Gnomintosh extensions'
 />
 
 ## Referencias
